--- a/portfolio-details.html
+++ b/portfolio-details.html
@@ -95,50 +95,56 @@
 
     <!-- ======= Portfolio Details Section ======= -->
     <section id="portfolio-details" class="portfolio-details">
-      <div class="container">
+      <div class="container"> 
 
-        <div class="row gy-4">
-
-          <div class="col-lg-8">
-            <div class="portfolio-details-slider swiper">
-              <div class="swiper-wrapper align-items-center">
-
-                <div class="swiper-slide">
-                  <img src="assets/img/portfolio/portfolio-details-1.jpg" alt="">
-                </div>
-
-                <div class="swiper-slide">
-                  <img src="assets/img/portfolio/portfolio-details-2.jpg" alt="">
-                </div>
-
-                <div class="swiper-slide">
-                  <img src="assets/img/portfolio/portfolio-details-3.jpg" alt="">
-                </div>
-
-              </div>
-              <div class="swiper-pagination"></div>
-            </div>
-          </div>
-
-          <div class="col-lg-4">
-            <div class="portfolio-info">
-              <h3>Project information</h3>
+          <div class="col-lg-12">
+            <!-- <div class="portfolio-info">
+              <h3>Project Information</h3>
               <ul>
-                <li><strong>Category</strong>: Web design</li>
-                <li><strong>Client</strong>: ASU Company</li>
-                <li><strong>Project date</strong>: 01 March, 2020</li>
-                <li><strong>Project URL</strong>: <a href="#">www.example.com</a></li>
-              </ul>
+                <li><strong>Tags</strong>: tag 1, tag 2, tag 5</li>
+                <li><strong>Project date</strong>: 2023 Feb 02 </li>              </ul>
+            </div> -->
+
+            <div class="portfolio-description">
+              <h1>Project Background </h1>
+              <p>
+                I want the final project to touch on my interests in improving health and creating a more caring society. Social wearables seem to embody those interests because they may include physiological elements and are intented to increase connection.                 <a href="https://journals.sagepub.com/doi/abs/10.1177/1948550613502990">Research</a> shows that even minimal social interactions may increase belonging so the following project proposals focus on just that.
+              </p>
+              <br>
+            </div>
+            <h1>Project Ideas </h1>
+            <div class="portfolio-description">
+              <h2>#1 Heart Rate Sync</h2>
+              <p>
+                The scene: Have you ever been to a silent disco with multiple channels? If not, here is an illustration of how it works. Everyone has on headphones where they can select one of three channels to listen to. When you select a channel, the sides of the headphones light up, so everyone around you knows what music you are listening to. The music on each channel is of different tempos and genres so it can be a bit of a bonding moment when you see someone with the same color as you. 
+              </p>
+              <img src="assets/img/portfolio/portfolio-1.jpg" alt="test">
+              <p>
+              This idea builds on that concept with another glowing element. The wearer has a heart rate indicator in the form of an LED pin or face sticker. It changes color for a given heart rate threshold. Wearers can see who is their threshold. Another area of exploration is to see if the music channel being listened to is correlated with heart rate. 
+              </p>
+              <h5>Project elements</h5>
+              <br>
+              <ol>
+                <li>3D design and fabrication: Heart sticker / pin </li>
+                <li>Electronics: Heart rate monitor (input), LEDs (output)</li>
+                <li>Microcontroller programming: Changing colors???</li>
+              </ol>
             </div>
             <div class="portfolio-description">
-              <h2>This is an example of portfolio detail</h2>
+              <h2>Idea 2</h2>
+              <p>
+                Autem ipsum nam porro corporis rerum. Quis eos dolorem eos itaque inventore commodi labore quia quia. Exercitationem repudiandae officiis neque suscipit non officia eaque itaque enim. Voluptatem officia accusantium nesciunt est omnis tempora consectetur dignissimos. Sequi nulla at esse enim cum deserunt eius.
+              </p>
+            </div>
+            <div class="portfolio-description">
+              <h2>Idea 3</h2>
               <p>
                 Autem ipsum nam porro corporis rerum. Quis eos dolorem eos itaque inventore commodi labore quia quia. Exercitationem repudiandae officiis neque suscipit non officia eaque itaque enim. Voluptatem officia accusantium nesciunt est omnis tempora consectetur dignissimos. Sequi nulla at esse enim cum deserunt eius.
               </p>
             </div>
           </div>
-
         </div>
+        
 
       </div>
     </section><!-- End Portfolio Details Section -->
@@ -159,16 +165,9 @@
 
       </div>
 
-      <p>&copy; Copyrights Folio. All rights reserved.</p>
 
       <div class="credits">
-        <!--
-        All the links in the footer should remain intact.
-        You can delete the links only if you purchased the pro version.
-        Licensing information: https://bootstrapmade.com/license/
-        Purchase the pro version with working PHP/AJAX contact form: https://bootstrapmade.com/buy/?theme=Folio
-      -->
-        Designed by <a href="https://bootstrapmade.com/">BootstrapMade</a>
+  
       </div>
 
     </div>
