--- a/portfolio-details.html
+++ b/portfolio-details.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
-  <title>Portfolio Details - Folio Bootstrap Template</title>
+  <title>Project Details</title>
   <meta content="" name="description">
   <meta content="" name="keywords">
 
@@ -40,11 +40,11 @@
   <header id="header" class="fixed-top header-inner-pages">
     <div class="container d-flex align-items-center justify-content-between">
 
-      <a href="index.html" class="logo"><img src="assets/img/logo.png" alt="" class="img-fluid"></a>
+      <!-- <a href="index.html" class="logo"><img src="assets/img/logo.png" alt="" class="img-fluid"></a> -->
       <!-- Uncomment below if you prefer to use an text logo -->
       <!-- <h1 class="logo"><a href="index.html">Folio</a></h1> -->
 
-      <nav id="navbar" class="navbar">
+      <!-- <nav id="navbar" class="navbar">
         <ul>
           <li><a class="nav-link scrollto " href="#hero">Home</a></li>
           <li><a class="nav-link scrollto" href="#about">About</a></li>
@@ -70,7 +70,8 @@
           <li><a class="nav-link scrollto" href="#contact">Contact</a></li>
         </ul>
         <i class="bi bi-list mobile-nav-toggle"></i>
-      </nav><!-- .navbar -->
+      </nav> -->
+      <!-- .navbar -->
 
     </div>
   </header><!-- End Header -->
@@ -82,11 +83,11 @@
       <div class="container">
 
         <div class="d-flex justify-content-between align-items-center">
-          <h2>Portfolio Details</h2>
+          <h2>Project Details</h2>
           <ol>
             <li><a href="index.html">Home</a></li>
-            <li><a href="portfolio.html">Portfolio</a></li>
-            <li>Portfolio Details</li>
+            <!-- <li><a href="portfolio.html">Portfolio</a></li> -->
+            <li>Project Details</li>
           </ol>
         </div>
 
@@ -118,17 +119,18 @@
               <p>
                 The scene: Have you ever been to a silent disco with multiple channels? If not, here is an illustration of how it works. Everyone has on headphones where they can select one of three channels to listen to. When you select a channel, the sides of the headphones light up, so everyone around you knows what music you are listening to. The music on each channel is of different tempos and genres so it can be a bit of a bonding moment when you see someone with the same color as you. 
               </p>
-              <img src="assets/img/portfolio/portfolio-1.jpg" alt="test">
+              <img src="assets/img/portfolio/headphones.png" alt="headphones">
               <p>
-              This idea builds on that concept with another glowing element. The wearer has a heart rate indicator in the form of an LED pin or face sticker. It changes color for a given heart rate threshold. Wearers can see who is their threshold. Another area of exploration is to see if the music channel being listened to is correlated with heart rate. 
+              This project idea builds on that concept with another glowing element. The wearer has a heart rate indicator in the form of an LED pin or face sticker. It changes color for a given heart rate threshold. Wearers can see who is their threshold. Another area of exploration is to see if the music channel being listened to is correlated with heart rate. 
               </p>
-              <h5>Project elements</h5>
+              <img src="assets/img/portfolio/sticker-kit.png" alt="sticker kit">
               <br>
-              <ol>
-                <li>3D design and fabrication: Heart sticker / pin </li>
-                <li>Electronics: Heart rate monitor (input), LEDs (output)</li>
-                <li>Microcontroller programming: Changing colors???</li>
-              </ol>
+              <br>
+              <br>
+              <br>
+              <h5>Project elements</h5>
+              <img class="img-wide" src="assets/img/portfolio/diagram.png" alt="sticker kit">
+              <br>
             </div>
             <div class="portfolio-description">
               <h2>Idea 2</h2>
