--- a/index.html
+++ b/index.html
@@ -83,7 +83,8 @@
 
     <div class="container">
       <div class="hero-content">
-        <h1>I'm <span class="typed" data-typed-items="Alexandra Weiner"></span></h1>
+        <h1>PS70</h1>
+        <!-- <h1>I'm Alexandra Weiner <span class="typed" data-typed-items="Alexandra Weiner"></span></h1> -->
         <!-- <p>Designer, Developer, Freelancer, Photographer</p> -->
 
         <!-- <ul class="list-unstyled list-social">
@@ -114,8 +115,8 @@
           <div class="col-lg-7">
             <div class="about-descr">
 
-              <p class="p-heading"> I am a student in the Master of Design Engineering</p>
-              <p class="separator"> Because I come from a design and business background, I know more about digital product design, behavioral insights, and business building, but less about digital fabrication. I have been tinkering around in the SEC makerspace and am excited to learn how fabricate more things via PS70! </p>
+              <p class="p-heading"> Class projects by Al Weiner</p>
+              <p class="separator"> I am a student in the Master of Design EngineeringI come from a design and business background and worked in digital product design, behavioral insights, and business building. I have been tinkering around in the SEC makerspace and am excited to learn how fabricate more things via PS70! </p>
 
             </div>
 
@@ -335,11 +336,11 @@
           </div>
 
           <div class="col-lg-4 col-md-6 portfolio-item filter-app">
-            <img src="assets/img/portfolio/portfolio-6.jpg" class="img-fluid" alt="">
+            <img src="assets/img/portfolio/sticker.png" class="img-fluid" alt="person wearing LED face sticker">
             <div class="portfolio-info">
-              <h4>App 3</h4>
-              <p>App</p>
-              <a href="assets/img/portfolio/portfolio-6.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox preview-link" title="App 3"><i class="bx bx-plus"></i></a>
+              <h4>Final Project Ideas</h4>
+              <p>3 ideas :)</p>
+              <a href="assets/img/portfolio/sticker.png" class="portfolio-lightbox preview-link" title="Final Project Ideas"><i class="bx bx-plus"></i></a>
               <a href="portfolio-details.html" class="details-link" title="More Details"><i class="bx bx-link"></i></a>
             </div>
           </div>
@@ -437,7 +438,7 @@
               </div>
             </div>
 
-            <div class="col-lg-6">
+            <!-- <div class="col-lg-6">
               <form action="forms/contact.php" method="post" role="form" class="php-email-form">
                 <div class="row gy-3">
 
@@ -481,7 +482,9 @@
           </div>
         </div>
       </div>
-    </div><!-- End Contact Section -->
+    </div> -->
+    
+    <!-- End Contact Section -->
 
   </main><!-- End #main -->
 
