updates to light project

--- a/light-fixture.html
+++ b/light-fixture.html
@@ -77,45 +77,51 @@
               <p>
                 I built three objects using best practices from the <a href="https://www.youtube.com/@ProductDesignOnline">Learn Fusion 360 in 30 days tutorial.</a>
               </p>
-              <h2>Legos</h2>
-              <img src="assets/img/portfolio/headphones.png" alt="headphones">
+              <h2>Lego</h2>
+              <img src="assets/img/portfolio/light/lego.gif" alt="lego">
               </p>
               <h2>Bottle</h2>
-              <img src="assets/img/portfolio/headphones.png" alt="headphones">
+              <img src="assets/img/portfolio/light/bottle.gif" alt="bottle">
               </p>
               <h2>Paper clip</h2>
-              <img src="assets/img/portfolio/headphones.png" alt="headphones">
+              <img src="assets/img/portfolio/light/paperclip.gif" alt="paper clip">
               <p>
-                Major learnings:
+                Some of my learnings:
                 <ol>
                   <li>Creating objects using the pattern feature</li>
                   <li>Tracing images with paths and using revolve for symmetry </li>
-                  <li>Building a curved object starting with rectangles and fillets</li>
+                  <li>Building a curved tube starting with rectangles and adding on fillets</li>
                 </ol>
               </p>
             </div>
             <div class="portfolio-description">
               <h1>Building a press fit construction kit </h1>
               <p>
-                I wanted to practice building a symettric object that I might actually use. We are in need of a new light fixture in my apartment so I thought this would be a good time to prototype an option for the space.
+                I wanted to practice building an object with symmetry that I might actually use. We are in need of a new light fixture in my apartment so I thought this would be a good time to prototype an option for the space. I took inspiration from this fixture, but wanted to start with something simpler to ensure the connection points fit and it would not fall apart when lifted.
               </p>
-              <img src="assets/img/portfolio/headphones.png" alt="light fixture from etsy">
+              <img src="assets/img/portfolio/light/etsy.png" alt="light fixture from etsy">
               <p>
-                I took inspiration from this fixture, but wanted to start with something simpler to ensure the connection points fit and it would not fall apart when lifted.
-              </p>
-              <img src="assets/img/portfolio/headphones.png" alt="fusion 360 drawing with user parameters set">
-              <p>
-              I also wanted to make a prototype in one session so I made sure the size did not exceed 18 x 32 inches, the size of the cutting bed.
-              </p>
-              <img src="assets/img/portfolio/light/light-pdf-file.png" alt="fusion 360 file for printing">
-              <p>
-                I created the outline using the user parameters so that I could update the design and materials later with less effort. I used cardboard boxes that measured at 4.01mm thickness. I also saw that the cardboard compressed slightly when handled so I did not worry too much about the size of the cuts because they would be distorted when putting the kit together. I then laser cut using the pre-sets for mat board and at 4.01mm thickness.
-              </p>
-              <p>
-                Voila! I present a prototype of the light fixture. The aesthetic is not there yet, it looks more like a space shift or a wheel, but now I have the skills to make a more beautiful version!
-              </p>
-              <img src="assets/img/portfolio/light/light-pdf-file.png" alt="my prototype of the lighting fixture">
-            </div>
+              I created the shape in Fusion using 'user parameters' so that I could later update the design and materials with less effort. You see below that thickness was set to 4.01mm, which is less than my material thickness, 4.08mm. Why is that?  When playing with the cardboard material I noticed that it compressed slightly when handled. So I decreased the thickness and did not worry too much about the size of the cuts because I knew the thickness would decrease when putting the kit together. 
+            </p>
+            <img src="assets/img/portfolio/light/parameters.png" alt="fusion 360 drawing with user parameters set">
+            <p>
+            I also wanted to make a prototype using one file and one laser cutting session in case I needed to repeat the process. With that, I made sure the size of the print was 18 x 32 inches, the size of the cutting bed. I then laser cut using the preset measurements for 4.01mm thick mat board.
+            </p>
+            <img src="assets/img/portfolio/light/light-pdf-file.png" alt="fusion 360 file for printing">
+
+            <p>
+              Voila! I present a prototype of the light fixture. The aesthetic is not there yet (it looks more like a space shift or a wheel) but now I have the skills to make a more beautiful version fairly easily! I will simply change the user parameters for the new material and, with the click of a button, increase the symmetric pattern on the circle.
+            </p>
+            <img src="assets/img/portfolio/light/light.JPG" alt="my prototype of the lighting fixture">
+            <br>
+            <br>
+            <h2>Lessons learnt</h2>
+            <p>
+              Initially, I though the scale of the design would impact the stability. Next time, I would make the prototype a small version of the full design. 
+            </p>
+            <br>
+            <br>
+          </div>
 
    <!-- End Portfolio Details Section -->
 
