--- a/portfolio-details.html
+++ b/portfolio-details.html
@@ -169,6 +169,17 @@
             </h5>
             <img class="img-narrow" src="assets/img/portfolio/final-ideas/light-sketches.png" alt="cup lighting ideas">
             <img class="img-narrow" src="assets/img/portfolio/final-ideas/light-images.png" alt="cup lighting ideas">
+            <h2>Other ideas ¯\_(ツ)_/¯</h2>
+            <p>
+            <ul>
+              <li>Orb that glows to the beat of the music from friends who are listening to music from elsewhere</li>
+              <li>Automatic clothes steamer</li>
+              <li>Visual + digital integrated reminder board</li>
+              <li>Interactive community bulletin board</li>
+              <li>Attachment to a water fountain that promotes reusing water bottles</li>
+              <li>Attachment for single use utensils that promotes people bringing their own</li>
+            </ul>
+            </p>
           </div>
         </div>
       </div>
