--- a/index.html
+++ b/index.html
@@ -226,7 +226,7 @@
         <div class="row portfolio-container">
 
           <div class="col-lg-4 col-md-6 portfolio-item filter-app">
-            <img src="assets/img/portfolio/portfolio-1.jpg" class="img-fluid" alt="">
+            <img src="assets/img/portfolio/light/light-pdf-file.png" class="img-fluid" alt="">
             <div class="portfolio-info">
               <h4>Week 2</h4>
               <p>Light fixture</p>
