--- a/index.html
+++ b/index.html
@@ -236,12 +236,12 @@
           </div>
 
           <div class="col-lg-4 col-md-6 portfolio-item filter-web">
-            <img src="assets/img/portfolio/portfolio-2.jpg" class="img-fluid" alt="">
+            <img src="assets/img/portfolio/kinetic/sculpture.gif" class="img-fluid" alt="">
             <div class="portfolio-info">
-              <h4>Web 3</h4>
-              <p>Web</p>
-              <a href="assets/img/portfolio/portfolio-2.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox preview-link" title="Web 3"><i class="bx bx-plus"></i></a>
-              <a href="portfolio-details.html" class="details-link" title="More Details"><i class="bx bx-link"></i></a>
+              <h4>Week 3</h4>
+              <p>Kinetic sculpture</p>
+              <a href="assets/img/portfolio/kinetic/sculpture.gif" data-gallery="portfolioGallery" class="portfolio-lightbox preview-link" title="Kinetic sculpture"><i class="bx bx-plus"></i></a>
+              <a href="kinetic-sculpture.html" class="details-link" title="More Details"><i class="bx bx-link"></i></a>
             </div>
           </div>
 
