--- a/index.html
+++ b/index.html
@@ -246,12 +246,12 @@
           </div>
 
           <div class="col-lg-4 col-md-6 portfolio-item filter-app">
-            <img src="assets/img/portfolio/portfolio-3.jpg" class="img-fluid" alt="">
+            <img src="assets/img/portfolio/arduino-programming/final.jpg" class="img-fluid" alt="arduino set up">
             <div class="portfolio-info">
-              <h4>App 2</h4>
-              <p>App</p>
-              <a href="assets/img/portfolio/portfolio-3.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox preview-link" title="App 2"><i class="bx bx-plus"></i></a>
-              <a href="portfolio-details.html" class="details-link" title="More Details"><i class="bx bx-link"></i></a>
+              <h4>Week 4</h4>
+              <p>Arduino programming</p>
+              <a href="assets/img/portfolio/arduino-programming/final.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox preview-link" title="Week 4"><i class="bx bx-plus"></i></a>
+              <a href="arduino-programming.html" class="details-link" title="More Details"><i class="bx bx-link"></i></a>
             </div>
           </div>
 
