updated final project

--- a/portfolio-details.html
+++ b/portfolio-details.html
@@ -107,7 +107,69 @@
             </div> -->
 
             <div class="portfolio-description">
-              <h1>Project Background </h1>
+              <h1>UPDATED: Project Background </h1>
+              <p>
+                Classification labels on food, such as "vegan" and "organic", are becoming more commonplace. Some people eat this way because they believe it is better for their bodies and others because of the proven benefits for the health of the planet. There are many campaigns encouraging people to ditch dairy milk in favor of lower carbon impact alternatives. However, there is limited information on the impact of these labels on consumer choice. This project builds off of current work out of MIT examining the impact of food labels. The MIT project experiments with digital menu labels, but has yet to break into the physical world. This hardware will enable ohysical world experimentation on the impact of labels on milk consumption.
+              </p>
+              <h1>Measuring milk consumption</h1>
+              <br>
+              <h3>Setting and Approach</h3>
+              <br>
+              <img src="assets/img/portfolio/final-ideas/sec-jugs.jpg" alt="four metal containers of milk">
+              <p>
+                The SEC serves free coffee everyday from 8:00 - 10:00am, leaving a consistent two hour time period to run an experiment. As you can see, there are four jugs filled with four different types of milk. The goal is to measure how many people consume which type of milk over the two hour period and see how that number changes based on jug labeling.
+                <p>
+                Requirements 
+                <ul> 
+                  <li>Count number of people pouring milk without human intervention</li>
+                  <li>Do not count movement of jugs without pouring, same person pouring twice, or refills of jugs by staff</li>
+                  <li>Maintain easy pouring for guests (i.e., no bulky hardware)</li>
+                  <li>Create signage / labeling for the milk</li>
+                  <li>Ensure wifi is strong and stable enough</li>
+                </ul>
+                </p>
+              </p>
+              <h3>Materials x4 </h3>
+              <p>
+              <ul> 
+                <li>Arduino Uno</li>
+                <li>Soldering station</li>
+                <li>Battery</li>
+                <li>Breadboard</li>
+                <li>Adafruit 9-DOF IMU. (Accelerometer, Gyroscope, or other way to measure pouring. This will be a key challenge because tipping depends on amount of milk in the jug.)</li>
+                <li>Adhesive to attach hardware to outside of jugs. (This may end up being a large rubber band with a clip because the adhesive may fall off with the cold temperatures of the milk.)</li>
+                <li>Acrylic laser cut box (to keep the milk and their labels highly visible so the jugs are moved less.)</li>
+              </ul>
+              </p>
+              <h3>Project Timeline</h3>
+              <p>
+                March
+              <ul> 
+                <li>Test sensors to detect milk pour </li>
+                <li>Prototype attachments to the milk jug</li>
+                <li>Build box to test milk organization theory</li>
+              </ul>
+              <p>
+              April
+              <ul> 
+                <li>Improve performance</li>
+                <li>Design signage and full experiment</li>
+                <li>Run experiment</li>
+              </ul>
+              </p>
+             </p>
+              <h3>Questions</h3>
+              <p>
+              <ul> 
+                <li>How might I decrease the size of the set up so that it is lighter and more disrete on the jugs?</li>
+                <li>How should I account for unstable wifi?</li>
+              </ul>
+              </p>
+              <br>
+              <br>
+              <br>
+              <br>
+              <h1>VERSION 1: Project Background </h1>
               <p>
                 I want the final project to touch on my interests in improving health and creating a more caring society. Social wearables seem to embody those interests because they may include physiological elements and are intented to increase connection.                 <a href="https://journals.sagepub.com/doi/abs/10.1177/1948550613502990">Research</a> shows that even minimal social interactions may increase belonging so the following project proposals focus on just that.
               </p>
