--- a/kinetic-sculpture.html
+++ b/kinetic-sculpture.html
@@ -95,7 +95,7 @@
               </p>
               <img src="assets/img/portfolio/kinetic/zen.gif" alt="kinetic wall art moving slowly">
               <p>
-                In the process of searching etsy and youtube for kinetic sculptures, I found a very aesthetically satisfying set of gears so I tried to replicate them. Learning my lesson from last time, I 3D printed a very small model to test the idea. It's a bit messy, but it gets across the concept: one gear moves and the rest follow.
+                In the process of searching etsy and youtube for kinetic sculptures, I found a very aesthetically satisfying set of gears so I tried to replicate them using <a href="https://www.youtube.com/watch?v=pG_EE4s1p30">this tutorial</a>. Learning my lesson from last time, I 3D printed a very small model to test the idea. It's a bit messy, but it gets across the concept: one gear moves and the rest follow.
               </p>
               <img src="assets/img/portfolio/kinetic/test.gif" alt="moving small gears with my hands">
               <p>
@@ -103,8 +103,9 @@
               </p> 
               <img src="assets/img/portfolio/kinetic/motor.JPG" alt="motor attached to gears">
               <p>
-                If you look really closely you can see that a pen casing is holding the rod that spins the gear in place. Again, I used hot glue in way too many places, but it proved the concept! I had to hold the sculpture in place to ensure that the motor did not spin. In the future, there would build a holder for the motor to firmly affix it to the box.
+                If you look really closely you can see that a pen casing is holding the rod that spins the gear in place. Again, I used hot glue in way too many places, but it proved the concept! I had to hold the sculpture in place to ensure that the motor did not spin. In the future, there would build a holder for the motor to firmly affix it to the box. I would also create a bigger box to hold these components.
               </p>
+              <img src="assets/img/portfolio/kinetic/circuit.jpg" alt="circuit components attached to motor">
               <img src="assets/img/portfolio/kinetic/sculpture.gif" alt="kinetic sculpture moving">
               <p>
               In the end, the sculpture captured the initial idea. Something small and visually satisfying for an office environment.
