updates to kinetic project

--- a/kinetic-sculpture.html
+++ b/kinetic-sculpture.html
@@ -95,17 +95,18 @@
               </p>
               <img src="assets/img/portfolio/kinetic/zen.gif" alt="kinetic wall art moving slowly">
               <p>
-                In the process of searching etsy and youtube for kinetic sculptures, I found a very aesthetically satisfying set of gears so I tried to replicate them using <a href="https://www.youtube.com/watch?v=pG_EE4s1p30">this tutorial</a>. Learning my lesson from last time, I 3D printed a very small model to test the idea. It's a bit messy, but it gets across the concept: one gear moves and the rest follow.
+                In the process of searching etsy and youtube for kinetic sculptures, I found a very aesthetically satisfying set of gears so I tried to replicate them using <a href="https://www.youtube.com/watch?v=pG_EE4s1p30">this tutorial</a>. I struggled to get the gears to be taller and wanted to start with the point of the assignment, driving the motor, so I ended up using <a href="https://cults3d.com/en/3d-model/various/4-paradoxical-gears-nop21">these templates</a> to create a taller gears and the holder. Learning my lesson from last time, I 3D printed a very small model to test the idea. It's a bit messy, but it gets across the concept: one gear moves and the rest follow.
               </p>
               <img src="assets/img/portfolio/kinetic/test.gif" alt="moving small gears with my hands">
               <p>
-                Now understanding that the gears would move together, but needed more precise alignment, I printed a holder to replace the screws. I also wanted to hide the motor, so I 3D cut a box using this <a href="https://en.makercase.com/#/basicbox">handy box file creator</a>. Once I had the box and 3D printed holder with four pegs for each gear, I tried drilling on the top of the box. The tension was too much and the pegs went flying off. I ended up hot glueing them back on, but in the future I would reprint so the structure was more even an stable and aligned. Because the top was not quite aligned, I had to stabilize the rod attached to the motor. 
+                Now understanding that the gears would move together, but needed more precise alignment, I printed a holder to replace the screws. I also wanted to hide the motor, so I 3D cut a box using this <a href="https://en.makercase.com/#/basicbox">handy box file creator</a>. Once I had the box and 3D printed holder with four pegs for each gear, I tried drilling on the top of the box. The tension was too much and the pegs went flying off. I ended up hot gluing them back on, but in the future I would reprint so the structure was more even an stable and aligned. Because the top was not quite aligned, I had to stabilize the rod attached to the motor. 
               </p> 
               <img src="assets/img/portfolio/kinetic/motor.JPG" alt="motor attached to gears">
               <p>
                 If you look really closely you can see that a pen casing is holding the rod that spins the gear in place. Again, I used hot glue in way too many places, but it proved the concept! I had to hold the sculpture in place to ensure that the motor did not spin. In the future, there would build a holder for the motor to firmly affix it to the box. I would also create a bigger box to hold these components.
               </p>
               <img src="assets/img/portfolio/kinetic/circuit.jpg" alt="circuit components attached to motor">
+              <br>
               <img src="assets/img/portfolio/kinetic/sculpture.gif" alt="kinetic sculpture moving">
               <p>
               In the end, the sculpture captured the initial idea. Something small and visually satisfying for an office environment.
