--- a/milling-molding-casting.html
+++ b/milling-molding-casting.html
@@ -146,6 +146,20 @@
             <p>
               The next step is to make the organ look more realistic, cut the tubes, and to test the pump when the fake blood arrives!
             </p>
+            <h1>CNC Process</h1>
+            <p>
+              I then used the ShopBot to CNC mill the name of my street. The file is a dfx from adobe illustrator using bauhaus font.
+            </p>
+            <img src="assets/img/portfolio/milling-molding-casting/cnc file.jpg" alt="mold contraption">
+            <br>
+            <br>
+            <p>
+              It turned out fairly well, but I would mill it on smoother wood next time to make the text clearer.
+            </p>
+            <img src="assets/img/portfolio/milling-molding-casting/cnc.jpg" alt="mold contraption">
+            <br>
+            <br>
+            <br>
             <br>
           </div>
 
