--- a/index.html
+++ b/index.html
@@ -260,7 +260,7 @@
             <div class="portfolio-info">
               <h4>Week 5</h4>
               <p>3D printing</p>
-              <a href="assets/img/portfolio/3d-printing/thumbnail.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox preview-link" title="Week 5"><i class="bx bx-plus"></i></a>
+              <a href="Week 53d-printing/thumbnail.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox preview-link" title="Week 5"><i class="bx bx-plus"></i></a>
               <a href="3d-printing.html" class="details-link" title="More Details"><i class="bx bx-link"></i></a>
             </div>
           </div>
@@ -268,7 +268,7 @@
           <div class="col-lg-4 col-md-6 portfolio-item filter-web">
             <img src="assets/img/portfolio/portfolio-5.jpg" class="img-fluid" alt="">
             <div class="portfolio-info">
-              <h4>Web 2</h4>
+              <h4>Week 6</h4>
               <p>Web</p>
               <a href="assets/img/portfolio/portfolio-5.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox preview-link" title="Web 2"><i class="bx bx-plus"></i></a>
               <a href="portfolio-details.html" class="details-link" title="More Details"><i class="bx bx-link"></i></a>
@@ -278,7 +278,7 @@
           <div class="col-lg-4 col-md-6 portfolio-item filter-app">
             <img src="assets/img/portfolio/portfolio-6.jpg" class="img-fluid" alt="">
             <div class="portfolio-info">
-              <h4>App 3</h4>
+              <h4>Week 7</h4>
               <p>App</p>
               <a href="assets/img/portfolio/portfolio-6.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox preview-link" title="App 3"><i class="bx bx-plus"></i></a>
               <a href="portfolio-details.html" class="details-link" title="More Details"><i class="bx bx-link"></i></a>
@@ -286,12 +286,12 @@
           </div>
 
           <div class="col-lg-4 col-md-6 portfolio-item filter-app">
-            <img src="assets/img/portfolio/portfolio-1.jpg" class="img-fluid" alt="">
+            <img src="assets/img/portfolio/milling-molding-casting/organ-painted.jpg" class="img-fluid" alt="">
             <div class="portfolio-info">
-              <h4>App 1</h4>
+              <h4>Week 8</h4>
               <p>App</p>
-              <a href="assets/img/portfolio/portfolio-1.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox preview-link" title="App 1"><i class="bx bx-plus"></i></a>
-              <a href="portfolio-details.html" class="details-link" title="More Details"><i class="bx bx-link"></i></a>
+              <a href="assets/img/portfolio/milling-molding-casting/organ-painted.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox preview-link" title="Week 8"><i class="bx bx-plus"></i></a>
+              <a href="milling-molding-casting.html" class="details-link" title="More Details"><i class="bx bx-link"></i></a>
             </div>
           </div>
 
