--- a/milling-molding-casting.html
+++ b/milling-molding-casting.html
@@ -144,8 +144,9 @@
             </p>
             <img src="assets/img/portfolio/milling-molding-casting/organ-painted.jpg" alt="mold contraption">
             <p>
-              The next step is to make the organ look more realistic, cut the tubes, and to test the pump when the fake blood arrives!
+              The next steps are to make the organ look more realistic and to test the pump when the fake blood arrives!
             </p>
+            <img src="assets/img/portfolio/milling-molding-casting/final.png" alt="mold contraption">
             <h1>CNC Process</h1>
             <p>
               I then used the ShopBot to CNC mill the name of my street. The file is a dfx from adobe illustrator using bauhaus font.
