update to image size week 8

--- a/milling-molding-casting.html
+++ b/milling-molding-casting.html
@@ -145,8 +145,8 @@
             <img src="assets/img/portfolio/milling-molding-casting/organ-painted.jpg" alt="mold contraption">
             <p>
               The next steps are to make the organ look more realistic and to test the pump when the fake blood arrives!
+              <img class="img-wide" src="assets/img/portfolio/milling-molding-casting/final.png" alt="organ on box">
             </p>
-            <img src="assets/img/portfolio/milling-molding-casting/final.png" alt="mold contraption">
             <h1>CNC Process</h1>
             <p>
               I then used the ShopBot to CNC mill the name of my street. The file is a dfx from adobe illustrator using bauhaus font.
