--- a/index.html
+++ b/index.html
@@ -300,8 +300,8 @@
             <div class="portfolio-info">
               <h4>Web 3</h4>
               <p>Web</p>
-              <a href="assets/img/portfolio/portfolio-2.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox preview-link" title="Web 3"><i class="bx bx-plus"></i></a>
-              <a href="portfolio-details.html" class="details-link" title="More Details"><i class="bx bx-link"></i></a>
+              <a href="assets/img/portfolio/portfolio-2.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox preview-link" title="Week 9"><i class="bx bx-plus"></i></a>
+              <a href="infinity-box.html" class="details-link" title="More Details"><i class="bx bx-link"></i></a>
             </div>
           </div>
 
