infiniti box updates

--- a/infinity-box.html
+++ b/infinity-box.html
@@ -58,7 +58,7 @@
 
     <!-- ======= Portfolio Details Section ======= -->
     <section id="portfolio-details" class="portfolio-details">
-     <p> Process notes <a href="https://docs.google.com/document/d/1RUUEQu3ZUKlyqNA03LrvcJb-1vD0tEkG-bP4FXmK_4U/edit?usp=sharing">here</a></p>
+     <p> This was a group collaboration. You can find our group page <a href="https://hueanhcao.github.io/PS70/wifi.html">here</a></p>
 
      
 
