--- a/index.html
+++ b/index.html
@@ -289,18 +289,18 @@
             <img src="assets/img/portfolio/milling-molding-casting/organ-painted.jpg" class="img-fluid" alt="">
             <div class="portfolio-info">
               <h4>Week 8</h4>
-              <p>App</p>
+              <p>Molding and Casting</p>
               <a href="assets/img/portfolio/milling-molding-casting/organ-painted.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox preview-link" title="Week 8"><i class="bx bx-plus"></i></a>
               <a href="milling-molding-casting.html" class="details-link" title="More Details"><i class="bx bx-link"></i></a>
             </div>
           </div>
 
           <div class="col-lg-4 col-md-6 portfolio-item filter-web">
-            <img src="assets/img/portfolio/portfolio-2.jpg" class="img-fluid" alt="">
+            <img src="assets/img/portfolio/wifi/infiniti.png" class="img-fluid" alt="">
             <div class="portfolio-info">
-              <h4>Web 3</h4>
-              <p>Web</p>
-              <a href="assets/img/portfolio/portfolio-2.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox preview-link" title="Week 9"><i class="bx bx-plus"></i></a>
+              <h4>Week 9</h4>
+              <p>Wifi</p>
+              <a href="assets/img/portfolio/wifi/infiniti.png" data-gallery="portfolioGallery" class="portfolio-lightbox preview-link" title="Week 9"><i class="bx bx-plus"></i></a>
               <a href="infinity-box.html" class="details-link" title="More Details"><i class="bx bx-link"></i></a>
             </div>
           </div>
@@ -308,9 +308,9 @@
           <div class="col-lg-4 col-md-6 portfolio-item filter-app">
             <img src="assets/img/portfolio/portfolio-3.jpg" class="img-fluid" alt="">
             <div class="portfolio-info">
-              <h4>App 2</h4>
-              <p>App</p>
-              <a href="assets/img/portfolio/portfolio-3.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox preview-link" title="App 2"><i class="bx bx-plus"></i></a>
+              <h4>Week 10</h4>
+              <p>Machine Building and End Effectors</p>
+              <a href="assets/img/portfolio/portfolio-3.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox preview-link" title="Week 10"><i class="bx bx-plus"></i></a>
               <a href="portfolio-details.html" class="details-link" title="More Details"><i class="bx bx-link"></i></a>
             </div>
           </div>
@@ -318,9 +318,9 @@
           <div class="col-lg-4 col-md-6 portfolio-item filter-card">
             <img src="assets/img/portfolio/portfolio-4.jpg" class="img-fluid" alt="">
             <div class="portfolio-info">
-              <h4>Card 2</h4>
-              <p>Card</p>
-              <a href="assets/img/portfolio/portfolio-4.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox preview-link" title="Card 2"><i class="bx bx-plus"></i></a>
+              <h4>Week 11</h4>
+              <p>Progress on final project</p>
+              <a href="assets/img/portfolio/portfolio-4.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox preview-link" title="Week 11"><i class="bx bx-plus"></i></a>
               <a href="portfolio-details.html" class="details-link" title="More Details"><i class="bx bx-link"></i></a>
             </div>
           </div>
@@ -328,10 +328,10 @@
           <div class="col-lg-4 col-md-6 portfolio-item filter-web">
             <img src="assets/img/portfolio/portfolio-5.jpg" class="img-fluid" alt="">
             <div class="portfolio-info">
-              <h4>Web 2</h4>
-              <p>Web</p>
-              <a href="assets/img/portfolio/portfolio-5.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox preview-link" title="Web 2"><i class="bx bx-plus"></i></a>
-              <a href="portfolio-details.html" class="details-link" title="More Details"><i class="bx bx-link"></i></a>
+              <h4>Final Project</h4>
+              <p>Installation components</p>
+              <a href="assets/img/portfolio/portfolio-5.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox preview-link" title="Final Project"><i class="bx bx-plus"></i></a>
+              <a href="final-project.html" class="details-link" title="More Details"><i class="bx bx-link"></i></a>
             </div>
           </div>
 
