--- a/infinity-box.html
+++ b/infinity-box.html
@@ -58,8 +58,9 @@
 
     <!-- ======= Portfolio Details Section ======= -->
     <section id="portfolio-details" class="portfolio-details">
+      <div class="container">
      <p> This was a group collaboration. You can find our group page <a href="https://hueanhcao.github.io/PS70/wifi.html">here</a></p>
-
+    </div>
      
 
    <!-- End Portfolio Details Section -->
