added rest of content

--- a/input-devices.html
+++ b/input-devices.html
@@ -94,8 +94,8 @@
             </p>
             <img src="assets/img/portfolio/input devices/inputdiagram.png" alt="diagram uno and mpu6050">
             <p>
-              And used this code to read from the sensor.
-              TODO add code from message to nathan 
+              And used the code from <a href=" https://howtomechatronics.com/tutorials/arduino/arduino-and-mpu6050-accelerometer-and-gyroscope-tutorial/">this tutorial</a>
+              to read from the sensor.
             </p>
             <img src="assets/img/portfolio/input devices/ezgif.com-video-to-gif (7).gif" alt="gif moving the mpu6050">
             <img src="assets/img/portfolio/input devices/ezgif.com-video-to-gif (8).gif" alt="gif moving the mpu6050">
@@ -130,15 +130,15 @@
             <p>
               I tried to build the cup sensor as outlined in the class instructions page.
             </p>
-            <img src="assets/img/portfolio/milling-molding-casting/sketch.png" alt="diagram of the set up">
+            <img src="assets/img/portfolio/input devices/cup1.jpg" alt="capacitive sensor cup">
             <p>
-              I used this code and this set up, but was getting a ton of variation on the y axis. 
+              I used <a href="https://www.tinkercad.com/things/jxwiFJQbHLA-magnificent-elzing-bombul/editel?sharecode=AyomfXdsAnZ-xy1cm0o4OCMm6P6AFc0qZebtLURTGvs">this code</a>, but was getting a ton of variation on the y axis. 
             </p>
-            <img src="assets/img/portfolio/milling-molding-casting/3D print.jpg" alt="3d printed organ">
+            <img src="assets/img/portfolio/input devices/graph1.png" alt="graph">
             <p>
-              I tried this set up, which removed the board and directly connected to the cup. 
+              I tried this set up, which removed the board and directly connected to the cup. Excuse the poor photography, the copper was better affixed when I actually tested the water level.
             </p>
-            <img src="assets/img/portfolio/milling-molding-casting/molding.jpg" alt="mold contraption">
+            <img src="assets/img/portfolio/input devices/cup2.jpg" alt="capacitive sensor cup try 2">
             <p>
               There was a relationship between the water level and the reading. To get accurate calibration next time, I would solder the set up, shorten the wires, and try both methods of
               capacitive sensing. 
