--- a/input-devices.html
+++ b/input-devices.html
@@ -136,7 +136,7 @@
             </p>
             <img src="assets/img/portfolio/input devices/graph1.png" alt="graph">
             <p>
-              I tried this set up, which removed the board and directly connected to the cup. Excuse the poor photography, the copper was better affixed when I actually tested the water level.
+              I tried <a href="https://www.tinkercad.com/things/eIDfG5F5BVe?sharecode=IHw2thYIrZN8Z4NezJOGq4nW-ZPSLLWwXGkOwrtS3kQ">this set up</a>, which removed the board and directly connected to the cup. Excuse the poor photography, the copper was better affixed when I actually tested the water level.
             </p>
             <img src="assets/img/portfolio/input devices/cup2.jpg" alt="capacitive sensor cup try 2">
             <p>
