updates to description

--- a/final-project.html
+++ b/final-project.html
@@ -79,7 +79,7 @@
                 My final project is a multiple elements of an installation to raise awareness and reduce harm from PFAS, also known as Forever Chemicals. Since I wanted to both improve my coding skills and practice 
                 the digital fabrication techniques I learned in class, I opted for an emphasis on coding the receipt printer and website along with a few other techniques for building the receipt container and organ.
               </p>
-            <h1>Video</h1>
+            <h1>Final Project</h1>
             <br>
             <br>
                <h1>Process</h1>
@@ -101,7 +101,7 @@
                  </ul>
                </p>
                <p>
-                 Box 
+                 Receipt Box 
                  <ul>
                    <li>1/4 inch white acrylic</li>
                    <li>Acrylic glue</li>
@@ -113,6 +113,7 @@
                    <li>Small magnet set x4</li>
                  </ul>
                </p>
+             </p>
                <h3> Configuring the printer</h3>
                <p>
                 For this component of the installation, 
@@ -262,10 +263,17 @@
               
               <h3>The "forever" printer</h3>
               <p>One of the project goals was to show the cumulative impact of PFAS consumption using a never-ending printer. This printer's 
-                receipts represented the constant purchase of goods with PFAS. Since this printer did not need to respond to an input, hard coding an Arduino UNO
-                to output receipts worked well. 
+                receipts represented the constant purchase of goods with PFAS. Since this printer did not need to respond to an input, coding an Arduino UNO
+                to output receipts consistently worked well. 
               </p>
               <p>INSERT CODE FOR UNO AND IMAGES</p>
+              <h3>Making the Forever Juice Label</h3>
+              <p>The final Forever Juice label was simply printed on to adhesive sticker paper, but there was a good lesson learnt along the way. The first attempt
+                was on a heat transfer machine. The process was fairly simple - print a reverse image, heat stamp it on to the adhesive, scrape the adhesive. As you can see below, the 
+                sticker had a black background and vibrant colors. After several tests, it was clear that the heat transfer could not absorb enough pigment for a fully black background.
+                Instead, it was more of a grey. This was a simple insight, but given that it is a new machine at the SEC, it will be helpful for future prints. 
+              </p>
+              <h3>add images from juice folder.. maybe carousel</h3>
               <!-- <button type="button" class="collapsible">main.cpp</button>
                 <div class="content">
                <pre>
